# contrib_ojdkbuild-utils

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/ojdkbuild/: utils.hpp
include/ojdkbuild/utils/: addressof.hpp  assert.hpp  current_executable.hpp  defer.hpp  errcode_to_string.hpp  exception.hpp  get_env.hpp  lambda.hpp  localappdata.hpp  narrow.hpp  noexcept.hpp  str_replace.hpp  str_trim.hpp  to_string.hpp  widen.hpp  windows.hpp
src/: current_executable.cpp  errcode_to_string.cpp  get_env.cpp  localappdata.cpp  narrow.cpp  str_replace.cpp  str_trim.cpp  widen.cpp
test/: CMakeLists.txt  addressof_test.cpp  current_executable_test.cpp  defer_test.cpp  errcode_to_string_test.cpp  exception_test.cpp  get_env_test.cpp  lambda_test.cpp  localappdata_test.cpp  narrow_test.cpp  str_replace_test.cpp  str_trim_test.cpp  to_string_test.cpp  widen_test.cpp  windows_test.cpp
